Substitute hard coded text with i18n placeholders

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,4 +1,25 @@
 {
+  "header": {
+    "menu": {
+      "solutions": "Lösungen",
+      "pricing": "Preise",
+      "docs": "Dokumentation",
+      "company": "Über uns"
+    },
+    "button": {
+      "sign-in": "Anmelden",
+      "sign-up": "Registrieren"
+    }
+  },
+  "footer": {
+    "text": {
+      "long-notice": "Große Neuigkeiten! Wir haben ein neues Produkt!",
+      "short-notice": "Wir haben ein neues Produkt!"
+    },
+    "button": {
+      "learn-more": "Mehr erfahren"
+    }
+  },
   "home": {
     "headline": "Angular + Tailwind Template",
     "text": "Wenn der Header und der Footer wie die Screenshots in \"src/assets/img\" aussehen, ist Tailwind korrekt eingerichtet und du kannst beginnen."
