--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -22,7 +22,7 @@
   },
   "home": {
     "headline": "Angular + Tailwind Template",
-    "text": "If the header and the footer look like the screenshots in \"src/assets/img\", Tailwind is set up and you can start coding."
+    "text": "If the website looks like the screenshot in \"src/assets/img\", Tailwind is set up and you can start coding."
   },
   "features": {
     "title": "Features",
