--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -25,7 +25,7 @@
     "text": "Wenn die Seite wie der Screenshot in \"src/assets/img\" aussieht, ist Tailwind korrekt eingerichtet und du kannst beginnen.",
     "ngrx": {
       "title": "NGRX Test",
-      "description": "Wir haben NGRX Funktionalität schon implementiert - Schreibe etwas in die Textarea, drück den Button und aktualisiere den Browser Tab um das zu verifizieren.",
+      "description": "Wir haben NGRX Funktionalität schon implementiert. Schreibe etwas in die Textarea, drück den Button und aktualisiere den Browser Tab um das zu verifizieren.",
       "button": "Input speichern",
       "message": "Deine Eingabe war: "
     }
