--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -25,7 +25,7 @@
     "text": "If the website looks like the screenshot in \"src/assets/img\", Tailwind is set up and you can start coding.",
     "ngrx": {
       "title": "NGRX Test",
-      "description": "We already implemented NGRX functionality - Type something, hit the button and refresh the browser tab to verify.",
+      "description": "We already implemented NGRX functionality. Type something, hit the button and refresh the browser tab to verify.",
       "button": "Store input",
       "message": "Your input was: "
     }
